--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,3 +5,8 @@ spring.datasource.username=${DATASOURCE_USERNAME}
 spring.datasource.password=${DATASOURCE_PASSWORD}
 
 spring.liquibase.change-log=classpath:db/changelog/changelog.xml
+
+spring.jpa.hibernate.ddl-auto=none
+
+token.jwt.key=${JWT_SECRET_KEY}
+token.refresh.lifetime=${REFRESH_TOKEN_LIFETIME}
