implemented jwt tokens. Partly configured Spring Security. Added method for login.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,4 +9,6 @@ spring.liquibase.change-log=classpath:db/changelog/changelog.xml
 spring.jpa.hibernate.ddl-auto=none
 
 token.jwt.key=${JWT_SECRET_KEY}
+token.refresh.key=${REFRESH_SECRET_KEY}
+token.jwt.lifetime=${JWT_TOKEN_LIFETIME}
 token.refresh.lifetime=${REFRESH_TOKEN_LIFETIME}
