Finished configuration Spring Security. Added JwtFilter. Added migrations for tables.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,3 +12,7 @@ token.jwt.key=${JWT_SECRET_KEY}
 token.refresh.key=${REFRESH_SECRET_KEY}
 token.jwt.lifetime=${JWT_TOKEN_LIFETIME}
 token.refresh.lifetime=${REFRESH_TOKEN_LIFETIME}
+
+appConfig.cors.allowedOrigins=*
+appConfig.cors.allowedHeaders=*
+appConfig.cors.allowedMethods=*
