--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -2,14 +2,14 @@ version: '2'
 
 services:
   app:
-    image: 'docker-spring-boot-postgres:latest'
+    image: 'user-service:latest'
     build:
       context: ./..
       dockerfile: ./docker/Dockerfile
     container_name: app
 
     depends_on:
-      - db
+      - user_db
     env_file:
       - .env
     ports:
@@ -17,17 +17,17 @@ services:
       - "5005:5005"
 
 
-  db:
+  user_db:
     image: 'postgres:13.1-alpine'
-    container_name: db
+    container_name: user_db
     env_file:
       - .env
     volumes:
       - ../src/main/resources/init.sql:/docker-entrypoint-initdb.d/init.sql
-      - db-data:/var/lib/postgresql/data
+      - user-db-data:/var/lib/postgresql/data
     ports:
       - "5432:5432"
 
 
 volumes:
-  db-data:
+  user-db-data:
