--- a/build.gradle
+++ b/build.gradle
@@ -40,6 +40,8 @@ dependencies {
 
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testImplementation 'org.springframework.security:spring-security-test'
+	testImplementation 'com.h2database:h2'
+	testImplementation 'junit:junit:4.13.1'
 }
 
 tasks.named('test') {
