--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -1,2 +1,11 @@
-spring.datasource.url = jdbc:h2:mem:test
+spring.datasource.url=jdbc:h2:mem:test;MODE=PostgreSQL;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE
+spring.datasource.driver-class-name=org.h2.Driver
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.H2Dialect
+spring.datasource.username=sa
+spring.datasource.password=
+spring.sql.init.data-locations=test_data.sql
+
+spring.jpa.hibernate.ddl-auto=none
+
+spring.liquibase.enabled=true
+spring.liquibase.change-log=classpath:db/changelog/changelog.xml
